# orimi

./: Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env_example  nginx.conf  pyproject.toml  requirements.txt
agents/: admin.py  constant.py  models.py  serializers.py  utils.py  views.py
agents/templates/: export_photo_report.html
agents/templates/admin/agents/agent/: change_form.html
configs/: settings.py  urls.py
shops/: admin.py  models.py  serializers.py  utils.py  views.py
shops/templates/: export_reports.html  export_reports_date_range.html  export_shop.html
