[project]
name = "orimi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.36",
    "celery>=5.5.3",
    "celery-stubs==0.1.3",
    "django>=5.2.3",
    "django-crontab>=0.7.1",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.0",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pandas-stubs==2.3.0.250703",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "whitenoise>=6.9.0",
]

[tool.ruff]
line-length = 92
target-version = "py312"
[tool.ruff.lint]
select = ["E", "F", "I"]
extend-select = ["B", "C4", "SIM", "TID", "UP", "N", "W", "PL"]
[tool.ruff.lint.isort]
known-first-party = ["orimi_shelf"]
